tests/typechecker/should_fail/type_annotations_6.csp
f :: (Int) -> Bool
f(0) = 0
